Chrome Overflow Fix

--- a/css/game.css
+++ b/css/game.css
@@ -1,5 +1,5 @@
 * {
-    overflow: scroll;
+    overflow: hidden;
 }
 #main {
     display: flex;
@@ -29,15 +29,19 @@
     overflow: hidden;
 }
 .op-input {
-    width: 100%;
+    width: 99%;
+    margin: auto;
+    margin-bottom: 0.5%;
     height: 45px;
     font-size: 18pt;
     text-align: center;
     margin-top: 5px;
 }
 #answerbtn {
+    width: 99%;
+    margin: auto;
+    margin-bottom: 0.5%;
     margin-top: 2%;
-    width: 100%;
     height: 45px;
     font-size: 18pt;
 }
